A positional Hash is not keyword arguments [Bug #18632]